Fix safari bug for buttons overlap on spell-top-bar-view

--- a/app/styles/play/level/tome/spell-top-bar-view.sass
+++ b/app/styles/play/level/tome/spell-top-bar-view.sass
@@ -91,6 +91,7 @@
       border-image: url(/images/common/button-background-primary-pressed.png) 14 20 20 20 fill round
 
   .videos-button
+    float: right
     &:hover, &:active
       border-image: url(/images/common/button-background-success-pressed.png) 14 20 20 20 fill round
 
